--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -6,6 +6,14 @@
     <a routerLink="/about">About</a>
   </li>
   <li>
+    <a class="not-a-link">Demo</a>
+    <ul>
+      <li>
+        <a routerLink="/demo/demo01">Bindings</a>
+      </li>
+    </ul>
+  </li>
+  <li>
     <a routerLink="/exo">Exo</a>
     <ul>
       <li>
