--- a/src/app/layout/nav/nav.component.scss
+++ b/src/app/layout/nav/nav.component.scss
@@ -18,7 +18,7 @@
         flex-direction: column;
         gap: 0.5rem;
         list-style: none;
-        padding: 0.5rem 1rem;
+        padding: 0.5rem 1rem 0;
       }
     }
   }
