--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,52 @@ a:hover {
   text-decoration: none;
   transform: none;
 }
+
+h2 {
+  margin: 0 0 1rem 3rem;
+}
+
+section {
+  padding: 1rem;
+  background-color: darkcyan;
+  border: 2px solid black;
+  width: fit-content;
+  margin: 0 3rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 0.5rem;
+
+  h3 {
+    color: white;
+  }
+
+  div {
+    margin-left: 1rem;
+  }
+}
+
+input {
+  height: 2rem;
+  margin: 0.5rem 0;
+  border-radius: 0.5rem;
+  border : none;
+  padding: 0 0.5rem;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  margin: 0.5rem 0;
+  background-color: white;
+  color : var(--light);
+  border : none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+
+  &:hover {
+    background-color: lightgrey;
+  }
+  &:disabled {
+    background-color: #29737325;
+  }
+}
