--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -11,6 +11,9 @@
       <li>
         <a routerLink="/demo/demo01">Bindings</a>
       </li>
+      <li>
+        <a routerLink="/demo/demo02">Pipes</a>
+      </li>
     </ul>
   </li>
   <li>
