--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -1,30 +1,14 @@
 <ul>
-  <li>
-    <a routerLink="/home">Home</a>
-  </li>
-  <li>
-    <a routerLink="/about">About</a>
-  </li>
-  <li>
-    <a class="not-a-link">Demo</a>
-    <ul>
-      <li>
-        <a routerLink="/demo/demo01">Bindings</a>
-      </li>
-      <li>
-        <a routerLink="/demo/demo02">Pipes</a>
-      </li>
-      <li>
-        <a routerLink="/demo/demo03">Directives</a>
-      </li>
-    </ul>
-  </li>
-  <li>
-    <a routerLink="/exo">Exo</a>
-    <ul>
-      <li>
-        <a routerLink="/exo/exo01">Timer</a>
-      </li>
-    </ul>
-  </li>
+  @for(link of links; track link.title){
+    <li>
+      <a (click)="toggleIsVisible(link)" [routerLink]="link.url">{{link.title}}</a>
+      @if(link.children && link.isChildrenVisible){
+        <ul>
+          @for(childLink of link.children; track childLink.title){
+            <a [routerLink]="childLink.url">{{childLink.title}}</a>
+          }
+        </ul>
+      }
+    </li>
+  }
 </ul>
