Demo input output

--- a/src/app/demos/demo-input-output/delete-dialog/delete-dialog.component.html
+++ b/src/app/demos/demo-input-output/delete-dialog/delete-dialog.component.html
@@ -1,3 +1,4 @@
+<ng-content></ng-content>
 <p>Etes vous sûre de vouloir supprimer {{ fruit }} ?</p>
 <div class="buttons">
   <button (click)="emitOnResponseEvent(false)">Non</button>
